<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.openmrs.eip</groupId>
    <artifactId>openmrs-eip</artifactId>
    <packaging>pom</packaging>
    <version>1.8.0-SNAPSHOT</version>

    <modules>
        <module>app-api</module>
        <module>app</module>
        <module>camel-openmrs</module>
        <module>webapp</module>
        <module>web-common</module>
        <module>web-sender</module>
        <module>web-receiver</module>
        <module>owa</module>
        <module>distribution</module>
    </modules>

    <name>OpenMRS EIP</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.build.timestamp.format>yyyy.MM.dd.HH.mm.ss.sss</maven.build.timestamp.format>
        <projectBuildNumber>${maven.build.timestamp}</projectBuildNumber>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <guava.version>28.0-jre</guava.version>
        <activeMq.version>6.0.0</activeMq.version>
        <lombok.version>1.18.30</lombok.version>
        <jsonassert.version>1.5.0</jsonassert.version>
        <json.version>20190722</json.version>
        <exclude.tests>nothing-to-exclude</exclude.tests>
        <camelVersion>4.2.0</camelVersion>
        <springBootVersion>3.1.5</springBootVersion>
        <springSecurityVersion>6.1.5</springSecurityVersion>
        <liquibaseVersion>4.24.0</liquibaseVersion>
        <tomcatVersion>10.1.15</tomcatVersion>
        <commonsCollVersion>4.4</commonsCollVersion>
        <commonsBeanUtilsVersion>1.9.3</commonsBeanUtilsVersion>
        <powerMockVersion>2.0.9</powerMockVersion>
        <testContainersVersion>1.15.2</testContainersVersion>
        <mysqlConnectionVersion>8.2.0</mysqlConnectionVersion>
        <jstlApiVersion>3.0.0</jstlApiVersion>
        <jstlImplVersion>3.0.1</jstlImplVersion>
        <jaxbApiVersion>2.4.0-b180830.0359</jaxbApiVersion>
        <hibernateValidatorVersion>8.0.1.Final</hibernateValidatorVersion>
        <camelTestSpringVersion>3.21.2</camelTestSpringVersion>
        <mockitoVersion>3.3.0</mockitoVersion>
        <h2Version>1.4.199</h2Version>
        <wiremockVersion>3.5.2</wiremockVersion>

        <!-- Plugin versions-->
        <assemblyPluginVersion>3.3.0</assemblyPluginVersion>
        <copyRenamePluginVersion>1.0.1</copyRenamePluginVersion>
        <springBootPluginVersion>3.1.5</springBootPluginVersion>
        <buildNumHelperPluginVersion>3.2.0</buildNumHelperPluginVersion>
        <buildHelperPluginVersion>3.4.0</buildHelperPluginVersion>
        <compilerPluginVersion>3.11.0</compilerPluginVersion>

        <!-- UI properties -->
        <projectLocale>en</projectLocale>
        <nodeVersion>v15.11.0</nodeVersion>
        <buildCommand>build</buildCommand>
        <localeDir></localeDir>
        <testScript>test</testScript>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:openmrs/openmrs-eip</connection>
        <developerConnection>scm:git:git@github.com:openmrs/openmrs-eip</developerConnection>
        <url>https://github.com/openmrs/openmrs-eip</url>
        <tag>HEAD</tag>
    </scm>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-spring-boot-dependencies</artifactId>
                <version>${camelVersion}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-tomcat</artifactId>
                <version>${springBootVersion}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-jpa</artifactId>
                <version>${springBootVersion}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-json</artifactId>
                <version>${springBootVersion}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-artemis</artifactId>
                <version>${springBootVersion}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-web</artifactId>
                <version>${springSecurityVersion}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-config</artifactId>
                <version>${springSecurityVersion}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-taglibs</artifactId>
                <version>${springSecurityVersion}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.tomcat.embed</groupId>
                <artifactId>tomcat-embed-jasper</artifactId>
                <version>${tomcatVersion}</version>
            </dependency>
            <dependency>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-core</artifactId>
                <version>${liquibaseVersion}</version>
                <exclusions>
                    <exclusion>
                        <groupId>ch.qos.logback</groupId>
                        <artifactId>logback-classic</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${commonsBeanUtilsVersion}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commonsCollVersion}</version>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${springBootVersion}</version>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.activemq</groupId>
                        <artifactId>activemq-client</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.mockito</groupId>
                        <artifactId>mockito-junit-jupiter</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-module-junit4</artifactId>
                <version>${powerMockVersion}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-api-mockito2</artifactId>
                <version>${powerMockVersion}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>mysql</artifactId>
                <version>${testContainersVersion}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2Version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock</artifactId>
                <version>${wiremockVersion}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>

        <!-- testing -->
        <dependency>
            <groupId>org.apache.camel</groupId>
            <artifactId>camel-test-spring</artifactId>
            <version>${camelTestSpringVersion}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.camel</groupId>
                    <artifactId>camel-test</artifactId>
                </exclusion>
                <exclusion>
                    <groupId> org.springframework</groupId>
                    <artifactId>spring-test</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.camel</groupId>
            <artifactId>camel-test</artifactId>
            <version>${camelTestSpringVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.skyscreamer</groupId>
            <artifactId>jsonassert</artifactId>
            <version>${jsonassert.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.vaadin.external.google</groupId>
                    <artifactId>android-json</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockitoVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>mysql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>pt</id>
            <properties>
                <projectLocale>pt</projectLocale>
                <buildCommand>build-pt</buildCommand>
                <localeDir>pt/</localeDir>
            </properties>
        </profile>
        <profile>
            <id>headless</id>
            <properties>
                <testScript>test-headless</testScript>
            </properties>
        </profile>
        <profile>
            <id>skipITests</id>
            <properties>
                <exclude.tests>**/*ITest.java</exclude.tests>
            </properties>
        </profile>
    </profiles>

    <build>
        <defaultGoal>install</defaultGoal>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>${buildNumHelperPluginVersion}</version>
                    <configuration>
                        <buildNumberPropertyName>revisionNumber</buildNumberPropertyName>
                        <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
                        <shortRevisionLength>6</shortRevisionLength>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>${buildHelperPluginVersion}</version>
                </plugin>
                <plugin>
                    <groupId>net.revelc.code.formatter</groupId>
                    <artifactId>formatter-maven-plugin</artifactId>
                    <version>2.16.0</version>
                    <configuration>
                        <lineEnding>LF</lineEnding>
                        <configFile>../CodeFormatter.xml</configFile>
                        <includes>
                            <include>**/*.java</include>
                            <include>**/*.json</include>
                        </includes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${springBootPluginVersion}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${assemblyPluginVersion}</version>
                    <configuration>
                        <appendAssemblyId>false</appendAssemblyId>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.coderplus.maven.plugins</groupId>
                    <artifactId>copy-rename-maven-plugin</artifactId>
                    <version>${copyRenamePluginVersion}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compilerPluginVersion}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens java.base/java.time=ALL-UNNAMED
                        --add-opens java.base/java.net=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.base/java.nio=ALL-UNNAMED
                        --add-opens java.base/java.math=ALL-UNNAMED
                        --add-opens java.base/java.text=ALL-UNNAMED
                        --add-opens java.base/java.util.stream=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.base/java.time.format=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-opens java.sql/java.sql=ALL-UNNAMED
                        --add-opens java.desktop/java.beans=ALL-UNNAMED
                        --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
                    </argLine>
                    <excludes>
                        <exclude>${exclude.tests}</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- allows the route to be ran via 'mvn camel:run' -->
            <plugin>
                <groupId>org.apache.camel</groupId>
                <artifactId>camel-maven-plugin</artifactId>
                <version>3.0.0-M2</version>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>openmrs-repo-releases</id>
            <name>OpenMRS Nexus Releases</name>
            <url>https://openmrs.jfrog.io/openmrs/releases</url>
        </repository>
        <snapshotRepository>
            <id>openmrs-repo-snapshots</id>
            <name>OpenMRS Nexus Snapshots</name>
            <url>https://openmrs.jfrog.io/openmrs/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
